bugfix: Incorporate feedback from review

--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -841,7 +841,7 @@
     "    : accuracy: TensorFlow accuracy function\n",
     "    \"\"\"\n",
     "    loss = session.run(cost, feed_dict={\n",
-    "        x: feature_batch, y: label_batch, keep_prob: keep_probability})\n",
+    "        x: feature_batch, y: label_batch, keep_prob: 1.0})\n",
     "    valid_acc = session.run(accuracy, feed_dict={\n",
     "        x: valid_features, y: valid_labels, keep_prob: 1.0})\n",
     "\n",
